# watcher

./: Cargo.toml
background/: Cargo.toml
background/src/: app.rs  lib.rs  pomodoro.rs
dx-app/: Cargo.toml
dx-app/src/: main.rs
egui-app/: Cargo.toml
egui-app/src/: main.rs
egui-app/src/widgets/: add_widget.rs  application_timer.rs  mod.rs  pomodoro.rs  widget_enum.rs
src/: app.rs  main.rs  scripts.rs
