[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31.1", features = ["persistence"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
background = { path = "../background" }
log = "0.4.27"

puffin = "0.19"
puffin_http = "0.16"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
parking_lot = "0.12.4"
